public/admin/styles/_forms.scss
// Some additional styling form elements

form {
	.form-group {
		// z-index for better sticky/absolute/fixed elements layering above form
		position: relative;
		z-index: 1;

		&:has(.md-fullscreen) {
			position: static;
			* {
				//opacity: 0.75;
			}
			.md-fullscreen {
				position: fixed;
				height: 100% !important;
				display: flex;
				flex-direction: column;
				align-items: stretch;
				.md-preview {
					color: $body-color;
				}
			}
			.md-editor, .md-preview {
				flex-grow: 1000;
				height: auto !important;
			}
		}

		> ul.list--radios, > ul.list--checkboxes {
			@extend .list-unstyled;
			margin-bottom: 0;
		}
		> .feedback {
			margin-top: 0.1rem;
			ul {
				@extend .list-unstyled;
				margin-bottom: 0;
			}
			&.feedback--invalid {
				color: $danger;
			}
			&.feedback--optional {
				@extend .text-muted;
				font-size: 0.85rem;
			}
		}
		> .help-block {
			@extend .text-muted;
			font-size: 0.85rem;
			line-height: 1.1;
			padding-top: 0.5rem;
			ul {
				margin-bottom: 0;
				padding-left: 1rem;
			}
		}
		> .alert {
			padding: 0.1rem 0.25rem;
			margin-bottom: 0;
		}
		label  {
			.tip {
				@extend .text-muted;
			}
		}
	}

	// File input with thumbnail and removal link
	.form-control-wrap:has( input[type="file"]  ) {
		display: grid;
		grid-template-columns: 112px 1fr;
		grid-template-rows: 1fr 1fr;

		* {
			grid-column:  2 / 3;
		}

		.img-thumbnail, a:has( .img-thumbnail ) {
			grid-column: 1 / 2;
			grid-row: 1 / -1;
		}

		input.form-control-file, input[type="file"] {
			align-self: start;
			grid-row: 1/2;
		}

		@include media-breakpoint-down(xs) {
			grid-template-columns: 90px 1fr;
			.img-thumbnail {
				max-width: 80px;
			}
		}
	}
}

// File form control styling (loosely adapted from Bootstrap 5)
.form-control-file {
	@extend .form-control;
	&::file-selector-button {
		padding: $input-padding-y $input-padding-x;
		padding: calc(#{$input-padding-y} + #{$input-border-width}) $input-padding-x;
		margin: (-$input-padding-y) (-$input-padding-x);
		margin-inline-end: $input-padding-x;
		color: $input-color;
		border-color: inherit;
		border-style: solid;
		border-width: 0;
		border-inline-end-width: $input-border-width;
		transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
		&:hover:not(:disabled):not([readonly])::file-selector-button {
			background-color: $gray-200;//$form-file-button-hover-bg;
		}
		font-size: inherit;
		line-height: inherit;
		
	}
	body.dark-mode & {
		&::file-selector-button {
			background-color: $gray-700;
			color: white;
			&:hover {
				background-color: $gray-600;
			}
		}
	}
}

// Applies CSS grid to .form-group to create horizontal form.

.form-horizontal, .fieldset-horizontal {
	.form-group {
		@include media-breakpoint-up(md){
			display: grid;
			grid-template-columns: 2fr 6fr 2fr;
			grid-template-rows: auto auto auto;
			grid-template-areas: 
				'label control help'
				'middleleft feedback help'
				'bottomleft instantfeedback help';
			grid-gap: 0 $grid-gutter-width/2;
			margin: 0;
			border-top: 1px solid $gray-200;
		}
		/*@include media-breakpoint-up(lg){
			grid-template-columns: 2fr 6fr 2fr;
			grid-template-rows: auto auto auto;
			grid-template-areas: 
				'label control help'
				'middleleft feedback help'
				'bottomleft instantfeedback help';
			grid-gap: 0 $grid-gutter-width/2;
		}*/
		@include media-breakpoint-up(xl){
			grid-template-columns: 2fr 8fr 2fr;
			grid-template-rows: auto auto auto;
			grid-template-areas: 
				'label control help'
				'middleleft feedback help'
				'bottomleft instantfeedback help';
			grid-gap: 0 $grid-gutter-width/2;
		}
		> label {
			padding-top: calc(.375rem + 1px);
			line-height: 1.5;
			grid-area: label;
		}
		> .form-control, .custom-control, > .btn, > .button-container, > .form-control-wrap, > .md-container {
			grid-area: control;
		}
		> ul.list--radios, > ul.list--checkboxes {
			grid-area: control;
		}
		> .feedback {
			grid-area: feedback;
		}
		> .help-block {
			grid-area: help;
			padding-top: 0;
		}
		> .alert {
			grid-area: instantfeedback;
			justify-self: stretch;
		}
		// Two classes added just to get rid of autoprefixer warnings
		> .dummy-111 {
			grid-area: bottomleft;
		}
		> .dummy-222  {
			grid-area: middleleft;
		}
		.button-container {
			//display: inline-block;
			display: flex;
			flex-wrap: wrap;
			padding-right: 60px;
			gap: 0.5rem;
		}
	}
}

// Lines between form-groups for better readiblity
form {
	.form-group {
		padding: 1rem 0;
	}
}


// Validation states
form {
	.form-group {
		&.form-group--has-error {
			.form-control {
				border: 1px solid $danger;
			}
			label {
				color: $danger;
			}
		}
		&.form-group--is-valid {
			.form-control {
				border: 1px solid $success;
			}
		}
	}
}


// search form
.form-search {
	@extend .form-inline;
	margin-bottom: 1rem;
	input {
		margin-right: 0.5em;
		@include media-breakpoint-down(xs){
			margin-bottom: 0.5rem;
		}
	}
}

// color picker style enhancements
.pickr {
	.pcr-button {
		border: 1px solid $input-border-color;
	}
}

// md editors are resizable vertically only
.md-editor {
	resize: vertical !important;
	min-height: 80px;
};

// Sticky Save Buttons container in forms
fieldset {
	.form-group:has(.button-container) {
		background-color: rgba(white,.5);
		position: sticky;
		bottom: 0;
		z-index: zindex-sticky;
		backdrop-filter: blur(5px);
		.button-container {
			grid-column-end: -1;
		}
	}
}

